修改默认的进度条

--- a/app/src/main/res/layout/dialog_progress.xml
+++ b/app/src/main/res/layout/dialog_progress.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="184dp"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="20dp"
+    android:background="@drawable/downloading_bg"
     android:gravity="center">
 
     <ProgressBar
+        android:layout_marginTop="13.5dp"
         android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="148dp"
+        android:layout_height="6dp"
         android:indeterminate="false"
         android:max="100"
+        android:progressDrawable="@drawable/progress_decorator"
         style="?android:attr/progressBarStyleHorizontal"/>
     <TextView
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="11.5dp"
         android:layout_width="wrap_content"
-        android:text="app is downloading"
+        android:text="APP IS DOWNLOADING"
+        android:textColor="#EDF1F7"
+        android:textSize="13.sp"
         android:layout_height="wrap_content"/>
 </LinearLayout>
