--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <RelativeLayout
         android:id="@+id/ivStartUp"
         android:layout_width="0dp"
@@ -24,13 +25,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
         <ImageView
-            android:layout_marginTop="22dp"
-            android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/startup"
-            />
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="22dp"
+            android:src="@mipmap/startup" />
     </RelativeLayout>
 
     <FrameLayout
@@ -41,5 +42,40 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
+    <!--<LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="#7700FF00"
+        android:paddingBottom="50dp"
+        android:gravity="center_horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="vertical">-->
+<!--        <EditText-->
+<!--            android:id="@+id/etRoomID"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:hint="please input room ID"-->
+<!--            />-->
+<!--        <EditText-->
+<!--            android:id="@+id/etUserID"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:hint="please input user ID"-->
+<!--            />-->
+<!--        <Button-->
+<!--            android:id="@+id/btConnect"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:paddingHorizontal="10.dp"-->
+<!--            android:paddingVertical="5dp"-->
+<!--            android:text="connect"-->
+<!--            />-->
+ <!--   </LinearLayout>-->
+
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
